create check out page  and update other pages

--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Shopping Cart</title>
+    <title>Fashion Website - Shopping Cart</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css">
 </head>
@@ -94,7 +94,7 @@
                     <td><strong id="cart-total">$0.00</strong></td>
                 </tr>
             </table>
-            <button class="normal">Proceed to Checkout</button>
+            <button class="normal"><a href="checkout.html" style="text-decoration: none;color: #fff;">Proceed to Checkout</a></button>
         </div>
     </section>
     
